--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
     <div class="Start-scetion">
         <i class="material-icons ">menu</i>
-        <a href="#"><img src="/Images/logo/Youtube-Logo.png" alt="" class="logo"></a>
+        <a href="#"><img src="Images/logo/Youtube-Logo.png" alt="" class="logo"></a>
     </div>
 
     <div class="mid-section">
@@ -38,7 +38,7 @@
         <a href=""> <i class="material-icons">video_call</i></a>
         <a href=""> <i class="material-icons">apps</i></a>
         <a href=""> <i class="material-icons">notifications</i></a>
-        <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""></a>
+        <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""></a>
     </div>
 </header>
 <!-- End Header -->
@@ -62,20 +62,20 @@
         </ul>
         <div class="SUBSCRIPTIONs">
             <h4>SUBSCRIPTIONS</h4>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""><em>mido alabady</em><i class="material-icons">sensors</i></a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady <i class="material-icons">sensors</i></a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady <i class="material-icons">sensors</i></a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
-            <a href=""><img src="/Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""><em>mido alabady</em><i class="material-icons">sensors</i></a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady <i class="material-icons">sensors</i></a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady <i class="material-icons">sensors</i></a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
+            <a href=""><img src="Images/SUBSCRIPTIONs/received_887258358386297.jpeg" alt=""> mido alabady</a>
         </div>
     </nav>
 </div>
@@ -86,9 +86,9 @@
     <div class="container">
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-01.png" alt="">
+            <img src="Images/videos/gallery-01.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -98,9 +98,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-01.png" alt="">
+            <img src="Images/videos/gallery-01.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -110,9 +110,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-02.png" alt="">
+            <img src="Images/videos/gallery-02.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -122,9 +122,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-02.png" alt="">
+            <img src="Images/videos/gallery-02.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -134,9 +134,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-03.jpg" alt="">
+            <img src="Images/videos/gallery-03.jpg" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -146,9 +146,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-03.jpg" alt="">
+            <img src="Images/videos/gallery-03.jpg" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -158,9 +158,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-04.png" alt="">
+            <img src="Images/videos/gallery-04.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -170,9 +170,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-04.png" alt="">
+            <img src="Images/videos/gallery-04.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -182,9 +182,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-05.jpg" alt="">
+            <img src="Images/videos/gallery-05.jpg" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -194,9 +194,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-05.jpg" alt="">
+            <img src="Images/videos/gallery-05.jpg" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -206,9 +206,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-06.png" alt="">
+            <img src="Images/videos/gallery-06.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -218,9 +218,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-06.png" alt="">
+            <img src="Images/videos/gallery-06.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -230,9 +230,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-01.png" alt="">
+            <img src="Images/videos/gallery-01.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -242,9 +242,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-01.png" alt="">
+            <img src="Images/videos/gallery-01.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -254,9 +254,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-02.png" alt="">
+            <img src="Images/videos/gallery-02.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
@@ -266,9 +266,9 @@
         </div>
 
         <div class="box" id="box">
-            <img src="/Images/videos/gallery-02.png" alt="">
+            <img src="Images/videos/gallery-02.png" alt="">
             <div class="ytd-rich">
-                <img src="./Images/ytd-rich/1.png" alt="">
+                <img src="Images/ytd-rich/1.png" alt="">
                 <div class="info">
                     <a class="tittle" href="#"><h2>كورس الاستماع</h2></a>
                     <a href="#"><p>Sbeata Academy</p></a>
